# text-game

./: .aiexclude  .gitignore  CHANGELOG.md  COMPLETED_WORK.md  IMPLEMENTATION_STATUS.md  Makefile  NPC_Phase1_Testing_Report.md  PHASES_5_6_COMPLETE.md  PHASES_7_8_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_4_COMPLETE.md  PROJECT_COMPLETE.md  Phase1_NPC_Testing_Summary.md  Readme.md  SESSION_HANDOFF.md  STRUCTURE_UPDATE.md  TEST_RESULTS.md  current_failures.md  eval_results.json  fungal_depths_npc_test_report.md  mypy.ini  package-lock.json  package.json  pyproject.toml  quick_start.md  refocus-docs.txt  removed_hooks.txt  requirements-dev.txt  run_game.command  run_tests.py  run_xplm_game.py  test_adjective_llm.txt  test_context_adjective.py  test_llm_adjective.py  test_narration_json.py  test_parser_debug.py  test_parser_stand.py  test_spatial_game.py  zshrc_addition.sh
.claude/: CLAUDE.md  settings.json  settings.local.json
Archive/: LLM_basic_integration.md  actor_interaction_conceptual_design_v2.md  actor_interaction_design_critique.md  actor_interaction_design_decisions.md  actor_interaction_evaluation.md  actor_interaction_implementation.md  actor_interaction_integration_testing.md  actor_interaction_questions.md  actor_interaction_session_handoff.md  authoring_spatial_rooms.md  behavior_refactoring_cleanup.md  behavior_refactoring_completion.md  behavior_refactoring_review_1.md  behavior_refactoring_review_5.md  behavior_refactoring_testing.md  cleanup_next_steps.md  close_issues_56_59.md  code_quality_analysis.md  description_handling_cleanup.md  examine_actors.md  (+29 more)
(+1223 files in other folders)
